force-app/main/default/objects/HW_Exchange__c/HW_Exchange__c.object-meta.xml
<CustomObject>
    <description>bridge between a Hardwarefulfilment and its exchange object CDS-2005</description>
    <label>HW Exchange</label>
    <nameField>
        <label>HW Exchange Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HW Exchanges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>