force-app/main/default/objects/HW_Exchange__c/fields/Authorisation_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorisation Date</label>
    <type>Date</type>
</CustomField>