force-app/main/default/objects/HW_Exchange__c/fields/Guarantee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_End_Date__c</fullName>
    <label>Guarantee End Date</label>
    <type>Date</type>
</CustomField>