force-app/main/default/objects/HW_Exchange__c/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <label>Netsuite ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>