force-app/main/default/objects/HW_Exchange__c/fields/Original_Item__c.field-meta.xml
<CustomField>
    <fullName>Original_Item__c</fullName>
    <inlineHelpText>Look-up to the Item entered into the exchange process</inlineHelpText>
    <label>Original Item</label>
    <referenceTo>HardwareFulfilment__c</referenceTo>
    <relationshipLabel>HW Exchanges</relationshipLabel>
    <relationshipName>HW_Exchanges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>